<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="horizontal"    android:padding="@dimen/seventeen"    tools:context=".EditorActivity">    <LinearLayout        android:paddingTop="@dimen/padding_17dp"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_weight="1.5"        android:orientation="vertical">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textSize="19sp"            android:text="@string/category_name"            android:paddingLeft="11dp" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textSize="19sp"            android:padding="11dp"            android:text="@string/category_price" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="19sp"            android:paddingStart="11dp"            android:text="@string/category_quantity"            android:paddingLeft="11dp" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:padding="11dp"            android:textSize="19sp"            android:text="@string/category_supplier" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="19sp"            android:paddingStart="11dp"            android:text="@string/category_phone"            android:paddingLeft="11dp" />    </LinearLayout>    <LinearLayout        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_weight="2"        android:orientation="vertical"        android:paddingLeft="6dp">        <EditText            android:id="@+id/edit_product_name"android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="19sp"            android:hint="@string/hint_product_name"            android:inputType="textCapWords"            tools:text="Name" />        <EditText            android:id="@+id/edit_product_price"android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="19sp"            android:hint="@string/hint_product_price"            android:inputType="number"            android:maxLength="6"/>        <EditText            android:id="@+id/edit_product_quantity"android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="19sp"            android:hint="@string/hint_product_quantity"            android:inputType="number"            android:maxLength="6" />        <EditText            android:id="@+id/edit_product_supplier"android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="19sp"            android:hint="@string/hint_product_supplier"            android:inputType="textCapWords" />        <EditText            android:id="@+id/edit_product_phone"android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="1"            android:textSize="19sp"            android:hint="@string/hint_product_phone"            android:inputType="phone"            android:maxLength="9"/>    </LinearLayout></LinearLayout>